# rime-phah-taibun

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  install.sh  install_windows.ps1  main.py  pyproject.toml  rime.lua  roadmap.md
docs/: _sidebar.md  index.html  user-guide.md
installer/: README.md
lua/: phah_taibun_commit.lua  phah_taibun_data.lua  phah_taibun_date.lua  phah_taibun_filter.lua  phah_taibun_help.lua  phah_taibun_input.lua  phah_taibun_lighttone.lua  phah_taibun_long_word.lua  phah_taibun_lookup.lua  phah_taibun_phrase.lua  phah_taibun_recommend.lua  phah_taibun_reverse_format.lua  phah_taibun_select_char.lua  phah_taibun_speedup.lua  phah_taibun_symbols.lua  phah_taibun_synonym.lua  phah_taibun_wildcard.lua
schema/: default.custom.yaml  hanlo_rules.yaml  hoabun_map.txt  lighttone_rules.json  moe700.yaml  phah_taibun.dict.yaml  phah_taibun.schema.yaml  phah_taibun_reverse.dict.yaml
scripts/: build_all.py  build_frequency.py  build_hoabun_map.py  build_kipsutian_reverse.py  build_lighttone_entries.py  build_moe_reverse.py  build_phrases.py  build_reverse_dict.py  convert_chhoetaigi.py  download_resources.sh  extract_900leku_freq.py  extract_icorpus_freq.py  extract_kipsutian_sentences.py  extract_kok4hau7_freq.py  extract_nmtl.py  extract_pojbh.py  extract_ungian_freq.py  install_linux.sh  install_macos.sh  install_windows.ps1  parse_lighttone.py  parse_lkk_rules.py  parse_moe700.py  tl_poj_convert.py  validate_dict.py
tests/: conftest.py  test_build_lighttone_entries.py  test_build_phrases.py  test_dict_conversion.py  (+15 more)
(+22 files in other folders)
